# Space-guardian

./: .gitignore  CMakeLists.txt  Shooter.sln  Shooter.vcxproj  Shooter.vcxproj.filters  background.c  background.h  common.h  defs.h  draw.c  draw.h  highscore.c  highscore.h  init.c  init.h  input.c  input.h  main.c  main.h  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  title.c  title.h  util.c
music/: battle.opus  highscore.opus  title-theme.opus
scores/: hs.ini
